--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Gojideth <martinschiquilloc@hotmail.com>",
@@ -14,6 +14,9 @@
     "prisma": "^3.15.2"
   },
   "dependencies": {
-    "@prisma/client": "^3.15.2"
+    "@prisma/client": "^3.15.2",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   }
 }
